creating relations for comments